--- a/404.html
+++ b/404.html
@@ -1,8 +1,9 @@
 ---
-layout: default
+layout: contained
 title: 404
 permalink: /404.html
 ---
+
 
 <h1>Page Not found</h1>
 <p>Sorry, but the page you were trying to view does not exist.</p>
